@@ -69,7 +69,7 @@ public class DefaultConfigJob extends Job<Void> {
         renameKeyIfPresent("provider.llm.dispatcher.maxRequestsPerHost", "dispatcher.llm.maxRequestsPerHost");
         renameKeyIfPresent("provider.llm.dispatcher.maxRequests", "dispatcher.llm.maxRequests");
         int cores = Runtime.getRuntime().availableProcessors();
-        int defaultPerHost = Math.max(64, Math.min(256, 8 * cores));
+        int defaultPerHost = Math.clamp(8L * cores, 64, 256);
         int defaultMax = 2 * defaultPerHost;
         seedIfAbsent("dispatcher.llm.maxRequestsPerHost", String.valueOf(defaultPerHost));
         seedIfAbsent("dispatcher.llm.maxRequests", String.valueOf(defaultMax));
